fix background effect not centered on some devices

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 :root {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: 'Roboto Mono', sans-serif;
+  /* font-family: 'Roboto Mono', sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,6 +14,10 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  max-width: 100vw;
 }
 
 a {
