--- a/src/sketch.css
+++ b/src/sketch.css
@@ -1,7 +1,21 @@
 #sketch {
-    position: absolute;
+    /* display: block; */
+    position: fixed;
     z-index: -1;
     overflow: hidden;
     margin: 0;
-    height: 100%;
+    /* height: 100%; */
+    /* width: 200px; */
+    /* left: calc(50% - 50vw); */
+    /* transform: translateY(calc(50% - 50vw)); */
+        /* left: 0%; */
 }
+/* 
+@media (orientation: portrait) {
+    #sketch {
+        left: 0%;
+        height: auto;
+        width: fit-content;
+        transform: translateY(calc(50% - 50vw));
+    }
+} */
